--- a/config.json
+++ b/config.json
@@ -10,6 +10,6 @@
       [false, false, false, false, false, false, false]
     ]
   },
-  "generations": 1000,
-  "logTimemiliseconds": 300
+  "generations": 10,
+  "logTimeMilliseconds": 300
 }
